# simple_pytorch_cpp

./: .gitignore  CMakeLists.txt  README.md  nn.cpp  nn.h  py_model_script.ipynb  train.cpp
data/: features.csv  labels.csv
models/: py_trace_model.pt
